fixed horizontal scrolls

--- a/apps/web/src/components/FooterSection/FooterSection.module.scss
+++ b/apps/web/src/components/FooterSection/FooterSection.module.scss
@@ -132,7 +132,7 @@
   .sticker {
     position: absolute;
     top: -122px;
-    left: 80%;
+    left: 75%;
     z-index: 3;
     width: 225px;
     height: 248px;
