--- a/apps/web/src/components/SponsorSection/SponsorSection.module.scss
+++ b/apps/web/src/components/SponsorSection/SponsorSection.module.scss
@@ -3,6 +3,7 @@
 @import 'styles/variables';
 
 .stickySection {
+  overflow-y: hidden;
   padding-bottom: 29px;
 
   @media (max-width: 768px) {
@@ -54,23 +55,11 @@
 }
 
 .logosWrapper {
-  width: vw-calc(1425.4);
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
   position: relative;
-
-  @media (max-width: 1080px) {
-    width: vw-calc(1415);
-  }
-
-  @media (max-width: 1440px) {
-    width: vw-calc(1420);
-  }
-
-  @media (max-width: 768px) {
-    left: 0;
-  }
 }
 
 .container {
